# PING_PONG

./: .gitignore  CMakeLists.txt  PING_PONG.data  PING_PONG.js  PING_PONG.wasm  README.md  index.html
.github/workflows/: Build for all platforms.yml  deploy.yml
headers/: AboutSection.h  Ball.h  Draw.h  Global.h  MultiPlayerLevel.h  Options.h  Rectangle.h  RenderAboutSection.h  RenderMultiPlayerLevel.h  RenderSinglePlayerLevel.h  SinglePlayerLevel.h  lock.h
src/: main.c
web-version/: PING_PONG.data  PING_PONG.js  PING_PONG.wasm  index.html
